<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvSongTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_title" />

    <EditText
        android:id="@+id/etSongTitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/enter_song_title_here"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvSingers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singers" />

    <EditText
        android:id="@+id/etSingers"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/enter_singer_s_name_here"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year" />

    <EditText
        android:id="@+id/etYear"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/enter_year_of_release_here"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvStars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rgStars"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbtn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1" />

            <RadioButton
                android:id="@+id/rbtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2" />

            <RadioButton
                android:id="@+id/rbtn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3" />

            <RadioButton
                android:id="@+id/rbtn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4" />

            <RadioButton
                android:id="@+id/rbtn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_new_song" />

        <Button
            android:id="@+id/btnView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/view_song_list" />

    </LinearLayout>

</LinearLayout>