<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/tvSongId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_id" />

    <EditText
        android:id="@+id/etSongId"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/songid"
        android:inputType="number" />

    <EditText
        android:id="@+id/etSongTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableLeft="@drawable/music"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/song_title1"
        android:inputType="text" />

    <EditText
        android:id="@+id/etSingers"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableLeft="@drawable/microphone"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/singer"
        android:inputType="text" />

    <EditText
        android:id="@+id/etYear"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableLeft="@drawable/calendar"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/year1"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rgStars"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="32dp"
                android:layout_height="60dp"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/star" />

            <RadioButton
                android:id="@+id/rbtn1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/_1" />

            <RadioButton
                android:id="@+id/rbtn2"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/_2" />

            <RadioButton
                android:id="@+id/rbtn3"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/_3" />

            <RadioButton
                android:id="@+id/rbtn4"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/_4" />

            <RadioButton
                android:id="@+id/rbtn5"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/_5" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#CFC7C2"
            android:text="@string/update" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#CFC7C2"
            android:text="@string/delete" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#CFC7C2"
        android:text="@string/cancel" />

    <!--    <TextView-->
    <!--        android:id="@+id/tvSongTitle"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/song_title" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/tvSingers"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/singers" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/tvYear"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/year" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/tvStars"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/stars" />-->

</LinearLayout>